kubernetes-templating/deployment_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebsrv-deployment  
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx 
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: homework-volume
          mountPath: /homework
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        - name: index-html
          mountPath: /homework/conf
        - name: homepage
          mountPath: /homework/homepage  
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -R /homework/*"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: homework-volume
        persistentVolumeClaim:
            claimName: pvc-for-deployment-policybased
      - name: index-volume
        persistentVolumeClaim:
            claimName: pvc-for-index
      - name: nginx-conf
        configMap:
          name: nginx-conf
      - name: index-html
        configMap:
          name: index-html
      - name: homepage
        configMap:
          name: homepage
      nodeSelector:
        homework: "true"
