kubernetes-templating/hwingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: homework
  annotations:
 #   kubernetes.io/ingress.class: "nginx"
 #    nginx.ingress.kubernetes.io/rewrite-target: /homepage 
spec:
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-for-deployment
                port:
                  number: 8090
